--- a/20160628_deedle2.md
+++ b/20160628_deedle2.md
@@ -80,6 +80,18 @@ expenses
 `groupRowsByString` groups the frame by a column where the content is of type `string`.
 `groupRowsUsing` groups the frame using a predicate which takes as input the __row key__ and the row as a `ObjectSeries<C>` where `C` is the type of the __column key__.
 
+#### Frame.nest
+
+```
+expenses
+|> Frame.groupByString "Category"
+|> Frame.nest
+|> Series.observations
+|> Seq.map (fun (category, subFrame) -> ...do something clever...)
+```
+
+Returns a Series which has the the __first key frame__ as key and the __grouped part of the frame__ as value.
+
 ### 1.2 Series
 
 The type of a series is `Series<K,V>` where `K` is the type of the __key__ and `V` is the type of the __value__.
@@ -96,6 +108,8 @@ Here are the functionalities I use the most with Series.
 amounts
 |> Series.mapValues (fun amount -> Math.Abs amount) 
 ```
+Maps over each values of the series.
+
 #### Series.dropMissing
 
 ```
@@ -103,12 +117,16 @@ amounts
 |> Series.dropMissing
 ```
 
+Drops all pais for which the value is `<missing>`.
+
 #### Series.observations
 
 ```
 amounts
 |> Series.observations
 ```
+
+Returns a sequence of key value pair.
 
 ## 2. Common statistical calculations
 
