--- a/20160628_deedle2.md
+++ b/20160628_deedle2.md
@@ -124,6 +124,7 @@ Drops all pais for which the value is `<missing>`.
 ```
 amounts
 |> Series.observations
+|> Seq.map (fun (date, amount) -> ...do something clever...)
 ```
 
 Returns a sequence of key value pair.
