--- a/20160628_deedle2.md
+++ b/20160628_deedle2.md
@@ -129,7 +129,14 @@ amounts
 
 Returns a sequence of key value pair.
 
-## 2. Common statistical calculations
+## 2. Statistical calculations
+
+`Deedle` provide a `Stats` module which contains commonly used statistical calculations and provide three variantes for each operation.
+For example, `mean` has `Stats.mean`, `Stats.expendingMean` and `Stats.movingMean`.
+
+The normal calculation applies to all values of the series.
+`Expending` calculation is done by taking the range from inception till the current value ([0, x]) and apply the calculation.
+`Moving` calculation are done by taking n values before the current value ([x - (n -1), x]) and apply the calculation.
 
 Stats
 MapValues Stats.Level
@@ -139,7 +146,3 @@ Expending mean
 
 Pivot table is one of the killer feature of Deedle.
 `pivotTable` allows you to produce a new frame by grouping cells based on predicate applied on rows and columns.
-
-
-
-
