--- a/20160628_deedle2.md
+++ b/20160628_deedle2.md
@@ -135,8 +135,8 @@ Returns a sequence of key value pair.
 For example, `mean` has `Stats.mean`, `Stats.expendingMean` and `Stats.movingMean`.
 
 The normal calculation applies to all values of the series.
-`Expending` calculation is done by taking the range from inception till the current value ([0, x]) and apply the calculation.
-`Moving` calculation are done by taking n values before the current value ([x - (n -1), x]) and apply the calculation.
+`Expending` calculation is done by taking the range from inception till the current value `[0, x]` and apply the calculation.
+`Moving` calculation are done by taking n values before the current value `[x - (n -1), x]` and apply the calculation.
 
 Stats
 MapValues Stats.Level
