--- a/20160628_deedle2.md
+++ b/20160628_deedle2.md
@@ -138,8 +138,37 @@ The normal calculation applies to all values of the series.
 `Expending` calculation is done by taking the range from inception till the current value `[0, x]` and apply the calculation.
 `Moving` calculation are done by taking n values before the current value `[x - (n -1), x]` and apply the calculation.
 
+The stats available are:
+
 ```
-MapValues Stats.Level
+Stats.count - gets the count
+Stats.kurt - calculates the kurtosis 
+Stats.max - gets the max
+Stats.min - gets the min
+Stats.mean - calculates the mean
+Stats.skew - calculates the skewness
+Stats.stdDev - calculates the standard deviation
+Stats.variance - calculates the variance
+```
+
+When a Frame is passed to `Stats`, the calculation is applied to every column of the Frame and a Series of the result is returned.
+When a Series is passed to `Stats`, the calculation is applied to the Series and the result is returned.
+
+#### Stats.level
+
+Another interesting function with `Stats` is `levelX`.
+For example `Stats.levelSum` definition is `level:('K -> 'L) -> series:(Series<'K, float>) -> Series<'L, float>`.
+Where `K` is the __key type__, `L` is the transformed key.
+It describes on which key level should the calculation be applied.
+It is used after a `groupBy` but it needs to operate on Series, therefore I usually get the numeric columns out of the frame before applying a `Stats.level`.
+
+The following will calculate the sum for all expenses grouped by date and return a series where the key is a `DateTime` and the value the sum of all expenses for that particular date.
+
+```
+expenses
+|> Frame.groupRowsBy "Date"
+|> Frame.getNumericCols
+|> Series.mapValues (Stats.levelSum fst)
 ```
 
 ## 3. Pivot table
