--- a/20160628_deedle2.md
+++ b/20160628_deedle2.md
@@ -157,8 +157,7 @@ When a Series is passed to `Stats`, the calculation is applied to the Series and
 #### Stats.level
 
 Another interesting function with `Stats` is `levelX`.
-For example `Stats.levelSum` definition is `level:('K -> 'L) -> series:(Series<'K, float>) -> Series<'L, float>`.
-Where `K` is the __key type__, `L` is the transformed key.
+For example `Stats.levelSum` definition is `level:('K -> 'L) -> series:(Series<'K, float>) -> Series<'L, float>` where `K` is the __key type__, `L` is the transformed key.
 It describes on which key level should the calculation be applied.
 It is used after a `groupBy` but it needs to operate on Series, therefore I usually get the numeric columns out of the frame before applying a `Stats.level`.
 
