--- a/20160628_deedle2.md
+++ b/20160628_deedle2.md
@@ -157,7 +157,7 @@ When a Series is passed to `Stats`, the calculation is applied to the Series and
 #### Stats.level
 
 Another interesting function with `Stats` is `levelX`.
-For example, `Stats.levelSum` definition is `level:('K -> 'L) -> series:(Series<'K, float>) -> Series<'L, float>` where `K` is the __key type__, `L` is the transformed key.
+For example, `Stats.levelSum` definition is `level:('K -> 'L) -> series:(Series<'K, float>) -> Series<'L, float>` where `K` is the key type, `L` is the transformed key based on the level selected.
 It describes on which key level should the calculation be applied.
 It is used after a `groupBy` but it needs to operate on Series, therefore I usually get the numeric columns out of the frame before applying a `Stats.level`.
 
@@ -174,3 +174,18 @@ expenses
 
 Pivot table is one of the killer feature of Deedle.
 `pivotTable` allows you to produce a new frame by grouping cells based on predicate applied on rows and columns.
+
+```
+expenses
+|> Frame.pivotTable
+    (fun _ r -> r.GetAs<string>("Category"))
+    (fun _ r -> r.GetAs<DateTime>("Date"))
+    (Stats.sum >> Series.get "Amount")
+```
+
+`pivotTable` takes 3 functions as argument.
+The first function is used as a selector for the row key.
+The second function is used as a selector for the column key.
+The third function is used as an aggregate function to be applied to the subframe resulting from the filtering of the row and column keys.
+
+ 
