--- a/20160628_deedle2.md
+++ b/20160628_deedle2.md
@@ -183,9 +183,8 @@ expenses
     (Stats.sum >> Series.get "Amount")
 ```
 
-`pivotTable` takes 3 functions as argument.
-The first function is used as a selector for the row key.
-The second function is used as a selector for the column key.
-The third function is used as an aggregate function to be applied to the subframe resulting from the filtering of the row and column keys.
+`pivotTable` takes 3 functions as argument:
+ 1. The first function is used as a selector for the row key.
+ 2. The second function is used as a selector for the column key.
+ 3. The third function is used as an aggregate function to be applied to the subframe resulting from the filtering of the row and column keys.
 
- 
