--- a/20160628_deedle2.md
+++ b/20160628_deedle2.md
@@ -184,7 +184,64 @@ expenses
 ```
 
 `pivotTable` takes 3 functions as argument:
- 1. The first function is used as a selector for the row key.
- 2. The second function is used as a selector for the column key.
- 3. The third function is used as an aggregate function to be applied to the subframe resulting from the filtering of the row and column keys.
+ 1. The first function is used as a selector for the row key
+ 2. The second function is used as a selector for the column key
+ 3. The third function is used as an aggregate function to be applied to the subframe resulting from the filtering of the row and column keys
 
+For example, we have Expense type:
+
+```
+type Expense = {
+    Date: DateTime
+    Label: string
+    Amount: float
+} with
+    static member Create(date, label, amount) =
+        { Date = date; Label = label; Amount = amount }
+```
+
+And we have Frame of expenses:
+
+```
+[ Expense.Create(new DateTime(2016, 2, 1), "Supermarket", 15.)
+  Expense.Create(new DateTime(2016, 2, 10), "Supermarket", 25.)
+  Expense.Create(new DateTime(2016, 2, 16), "Clothes", 15.)
+  Expense.Create(new DateTime(2016, 3, 10), "Supermarket", 65.) ]
+|> Frame.ofRecords
+```
+
+```
+     Date                Label       Amount 
+0 -> 10/02/2016 00:00:00 Supermarket 15     
+1 -> 10/02/2016 00:00:00 Supermarket 25     
+2 -> 10/02/2016 00:00:00 Clothes     15     
+3 -> 10/03/2016 00:00:00 Supermarket 65       
+```
+
+A common operation would be to get the number of expenses for a category per day.
+To do that, we use `pivotTable`:
+
+```
+[ Expense.Create(new DateTime(2016, 2, 10), "Supermarket", 15.)
+  Expense.Create(new DateTime(2016, 2, 10), "Supermarket", 25.)
+  Expense.Create(new DateTime(2016, 2, 10), "Clothes", 15.)
+  Expense.Create(new DateTime(2016, 3, 15), "Supermarket", 65.) ]
+|> Frame.ofRecords
+|> Frame.pivotTable
+    (fun _ r -> r.GetAs<DateTime>("Date").ToShortDateString())
+    (fun _ r -> r.GetAs<string>("Label"))
+    Frame.countRows
+|> Frame.fillMissingWith 0
+```
+
+This operation results in the following frame:
+
+```
+              Supermarket Clothes 
+10/02/2016 -> 2           1       
+15/03/2016 -> 1           0          
+```
+
+Thanks to `pivotTable`, we get a Frame which exactly match our requirements.
+We could also get the sum of all amounts. We could also pivot by the month or even pivot on the amount itself.
+There are endless possibilities to extract data and visualise it in a way that will help us understand it better.
