--- a/20160628_deedle2.md
+++ b/20160628_deedle2.md
@@ -1,21 +1,21 @@
 # Data exploration with Deedle
 
-Data exploration is the process of taking data and manipulating it in such a way that it is workable with.
-Real life data rarely come in a format exploitable for analysis, this is why data exploration is a necessary step.
-It involves taking data from CSVs or databases, renaming, categorizing, reordering, transposing or pivoting tables and data.
+Data exploration is the process of taking data and manipulating it in such a way that it is workable with and extract information out of the data by forming meaningful groups or plotting meaningful graphs.
+The issue is that real life data rarely come in a format exploitable for analysis, this is a first step of manipulation of data is needed before analysis.
+This step involves taking data from CSVs or databases, renaming, categorizing, reordering, transposing or pivoting tables and data.
 Without any tools or libraries, it would be a pain to do these common operations.
 
 `Deedle` is a library which simplifies data exploration by providing functions to execute common manipulation on dataframes and timeseries.
 
-As I already went through how to get started with `Deedle` in a previous tutorial.
-
-[https://kimsereyblog.blogspot.co.uk/2016/04/a-primer-on-manipulating-data-frame.html](https://kimsereyblog.blogspot.co.uk/2016/04/a-primer-on-manipulating-data-frame.html).
+[http://bluemountaincapital.github.io/Deedle/](http://bluemountaincapital.github.io/Deedle/)
 
 Today I would like to show more functionalities of `Deedle` and how they can be used in a real life scenario.
+I already went through how to get started with `Deedle` in a previous tutorial which you can refer to if you never heard of `Deedle`.
+[https://kimsereyblog.blogspot.co.uk/2016/04/a-primer-on-manipulating-data-frame.html](https://kimsereyblog.blogspot.co.uk/2016/04/a-primer-on-manipulating-data-frame.html).
 
 This post is composed by three parts:
- 1. A reminder on what is a Deedle Frame
- 2. Common statistical calculations
+ 1. A reminder on what is a Deedle Frame and Series
+ 2. Statistical calculations
  3. Pivot table
 
 ## 1. A reminder on what is a Deedle Frame and Series
@@ -244,4 +244,13 @@ This operation results in the following frame:
 
 Thanks to `pivotTable`, we get a Frame which exactly match our requirements.
 We could also get the sum of all amounts. We could also pivot by the month or even pivot on the amount itself.
-There are endless possibilities to extract data and visualise it in a way that will help us understand it better.
+There are endless possibilities to extract data and visualize it in a way that will help us understand it better.
+
+## Conclusion
+
+`Deedle` is a really powerful tool to manipulate data through dataframe and series.
+A lot more can be done, what I showed here are only a small subset of the functionalities.
+I have used Deedle in one of [my personal project](https://github.com/Kimserey/DataExpenses) so if you need examples you can refer to the part where I manipulate the Frames.
+I hope this tutorial was useful for you, if you liked it let me know and I will continue to post more on that subject.
+Like always, if you have any comment leave it here or hit me on Twitter [@Kimserey_Lam]https://twitter.com/Kimserey_Lam).
+See you next time!
