--- a/20160628_deedle2.md
+++ b/20160628_deedle2.md
@@ -252,5 +252,5 @@ There are endless possibilities to extract data and visualize it in a way that w
 A lot more can be done, what I showed here are only a small subset of the functionalities.
 I have used Deedle in one of [my personal project](https://github.com/Kimserey/DataExpenses) so if you need examples you can refer to the part where I manipulate the Frames.
 I hope this tutorial was useful for you, if you liked it let me know and I will continue to post more on that subject.
-Like always, if you have any comment leave it here or hit me on Twitter [@Kimserey_Lam]https://twitter.com/Kimserey_Lam).
+Like always, if you have any comment leave it here or hit me on Twitter [@Kimserey_Lam](https://twitter.com/Kimserey_Lam).
 See you next time!
