--- a/20160628_deedle2.md
+++ b/20160628_deedle2.md
@@ -249,8 +249,8 @@ There are endless possibilities to extract data and visualize it in a way that w
 ## Conclusion
 
 `Deedle` is a really powerful tool to manipulate data through dataframe and series.
-A lot more can be done, what I showed here are only a small subset of the functionalities.
-I have used Deedle in one of [my personal project](https://github.com/Kimserey/DataExpenses) so if you need examples you can refer to the part where I manipulate the Frames.
+A lot more can be done, what I showed here is only a small subset of the functionalities.
+I have used Deedle in one of [my personal project](https://github.com/Kimserey/DataExpenses), so if you need examples, you can refer to the part where I manipulate the Frames.
 I hope this tutorial was useful for you, if you liked it let me know and I will continue to post more on that subject.
 Like always, if you have any comment leave it here or hit me on Twitter [@Kimserey_Lam](https://twitter.com/Kimserey_Lam).
 See you next time!
