--- a/20160628_deedle2.md
+++ b/20160628_deedle2.md
@@ -1,6 +1,6 @@
 # Data exploration with Deedle
 
-Data exploration is the process of taking data and manipulating it in such a way that it is workable with and extract information out of the data by forming meaningful groups or plotting meaningful graphs.
+Data exploration is the process of taking data and manipulating it in such a way that it is workable with and extract information out of it by forming meaningful groups or plotting meaningful graphs.
 The issue is that real life data rarely come in a format exploitable for analysis, this is a first step of manipulation of data is needed before analysis.
 This step involves taking data from CSVs or databases, renaming, categorizing, reordering, transposing or pivoting tables and data.
 Without any tools or libraries, it would be a pain to do these common operations.
