--- a/20160628_deedle2.md
+++ b/20160628_deedle2.md
@@ -1,7 +1,9 @@
-# Data exploration with Deedle
+# Manipulating data frame with Deedle in FSharp (Part 2)
 
-Data exploration is the process of taking data and manipulating it in such a way that it is workable with and extract information out of it by forming meaningful groups or plotting meaningful graphs.
-The issue is that real life data rarely come in a format exploitable for analysis, this is a first step of manipulation of data is needed before analysis.
+Today I would like to show more functionalities of `Deedle` and how they can be used in a real life scenario.
+I already went through [how to get started with `Deedle` in a previous tutorial (Part 1)](https://kimsereyblog.blogspot.co.uk/2016/04/a-primer-on-manipulating-data-frame.html) which you can refer to if you never heard of `Deedle`.
+
+In real life, data rarely (if not never) come in a format exploitable for analysis therefore, a first step of manipulation of data is always needed before analysis.
 This step involves taking data from CSVs or databases, renaming, categorizing, reordering, transposing or pivoting tables and data.
 Without any tools or libraries, it would be a pain to do these common operations.
 
@@ -9,9 +11,7 @@ Without any tools or libraries, it would be a pain to do these common operations
 
 [http://bluemountaincapital.github.io/Deedle/](http://bluemountaincapital.github.io/Deedle/)
 
-Today I would like to show more functionalities of `Deedle` and how they can be used in a real life scenario.
-I already went through how to get started with `Deedle` in a previous tutorial which you can refer to if you never heard of `Deedle`.
-[https://kimsereyblog.blogspot.co.uk/2016/04/a-primer-on-manipulating-data-frame.html](https://kimsereyblog.blogspot.co.uk/2016/04/a-primer-on-manipulating-data-frame.html).
+Even though I went through some of the feature in [Part 1](https://kimsereyblog.blogspot.co.uk/2016/04/a-primer-on-manipulating-data-frame.html), I would like to share more features with you which are extremely useful when manipulating dataframes.
 
 This post is composed by three parts:
  1. A reminder on what is a Deedle Frame and Series
