--- a/20160628_deedle2.md
+++ b/20160628_deedle2.md
@@ -1,7 +1,7 @@
 # Manipulating data frame with Deedle in FSharp (Part 2)
 
-Today I would like to show more functionalities of `Deedle` and how they can be used in a real life scenario.
-I already went through [how to get started with `Deedle` in a previous tutorial (Part 1)](https://kimsereyblog.blogspot.co.uk/2016/04/a-primer-on-manipulating-data-frame.html) which you can refer to if you never heard of `Deedle`.
+Today, I would like to show more functionalities of `Deedle` and how they can be used in a real life scenario.
+If you never heard of `Deedle` before, you can find [A primer on `Deedle` (Part 1) here](https://kimsereyblog.blogspot.co.uk/2016/04/a-primer-on-manipulating-data-frame.html).
 
 In real life, data rarely (if not never) come in a format exploitable for analysis therefore, a first step of manipulation of data is always needed before analysis.
 This step involves taking data from CSVs or databases, renaming, categorizing, reordering, transposing or pivoting tables and data.
