--- a/20160928_gimp.md
+++ b/20160928_gimp.md
@@ -1,4 +1,4 @@
-# GIMP
+# Get started with GIMP
 
 When working on personal projects, there's one thing which use to always make me waste lot of time - art.
 Art in the sense of making logo, icon and other images like feature graphics or promotional images.
@@ -25,8 +25,8 @@ This post is a highlight of some features from GIMP:
 
 Starting by zooming. Probably what I do the most zoom and unzoom using the keyboard shortcut + and -.
 
-![Zoom icon]()
-![zoom options]()
+![Zoom icon](https://github.com/Kimserey/BlogArchive/blob/master/img/gimp/zoom.png?raw=true)
+![zoom options](https://github.com/Kimserey/BlogArchive/blob/master/img/gimp/zoom_in_out.png?raw=true)
 
 ## 1.1 Usage
 
@@ -36,17 +36,17 @@ I zoom/unzoom to add precision in the selections.
 
 Scaling canvas would be used to expand the image drawing area so that you can fit more things.
 
-![Scale canvas 1]()
-![Scale canvas 2]()
+![Scale canvas 1](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/gimp/canvas_size.png)
+![Scale canvas 2](https://github.com/Kimserey/BlogArchive/blob/master/img/gimp/canvas_size_2.png?raw=true)
 
 Scaling the image would transform the width and height. It s very useful to downsize the image width and height.
 
-![Scale image 1]()
-![Scale image 2]()
+![Scale image 1](https://github.com/Kimserey/BlogArchive/blob/master/img/gimp/scale_image.png?raw=true)
+![Scale image 2](https://github.com/Kimserey/BlogArchive/blob/master/img/gimp/scale_image_2.png?raw=true)
 
 Scaling selection same as scaling image except will scale the selection.
 
-![Scale selection 1]()
+![Scale selection 1](https://github.com/Kimserey/BlogArchive/blob/master/img/gimp/scale_select.png?raw=true)
 
 ### 2.1 Usage
 
@@ -58,7 +58,7 @@ I also use a lot the scaling of selection to construct images of multiple layers
 Autocrop can be accessed from `Image > Autocrop image`.
 It will remove the transparent part and crop the image.
 
-![autocrop]()
+![autocrop](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/gimp/autocrop.png)
 
 ### 3.1 Usage
 
@@ -72,37 +72,38 @@ The selections I use most are rectangle selection, free selection selection by c
 
 Rectangle selection can be access from the icon:
 
-![rectangle selection]()
+![rectangle selection](https://github.com/Kimserey/BlogArchive/blob/master/img/gimp/rectangle_select.png?raw=true)
 
 Free selection allows to draw a selection area. It can be accessed from the icon:
 
-![free selection]()
+![free selection](https://github.com/Kimserey/BlogArchive/blob/master/img/gimp/free_select.png?raw=true)
 
 Lastely selection by color will select all pixels from the same color selected:
 
-![color selection]()
+![color selection](https://github.com/Kimserey/BlogArchive/blob/master/img/gimp/color_select.png?raw=true)
 
 ### 4.1 Usage
 
 I primarly used the selections to cut or copy pieces of images but it is also useful to make a selection and fill up the selection with a Foreground color or Background color.
 
-![fill up]()
+![fill up](https://github.com/Kimserey/BlogArchive/blob/master/img/gimp/fill_color.png?raw=true)
 
 ## 5. Guide
 
 Another extremely useful feature is the guide.
 It can be created using create guide line to delimit areas in your image. 
 
-![guide create]()
+![guide create](https://github.com/Kimserey/BlogArchive/blob/master/img/gimp/guide.png?raw=true)
+![guides](https://github.com/Kimserey/BlogArchive/blob/master/img/gimp/guide_2.png?raw=true)
 
 If you don't see any guide it might be because the visibility isn't enable.
 Enable it from the View menu.
 
-![enable guide]()
+![enable guide](https://github.com/Kimserey/BlogArchive/blob/master/img/gimp/guide_show.png?raw=true)
 
 After that it's possible to move the guides using the move tool and having the options `Pick a layer or guide`.
 
-![pick layer or guide]()
+![pick layer or guide](https://github.com/Kimserey/BlogArchive/blob/master/img/gimp/move_guides.png?raw=true)
 
 ### 5.1 Usage 
 
@@ -115,11 +116,11 @@ I used it to make the border of my icon consistant by making selections guided b
 Lastely a very useful tool is the measurement tool.
 Click and drag to see the measurements.
 
-![measure icon]()
+![measure icon](https://github.com/Kimserey/BlogArchive/blob/master/img/gimp/measurements.png?raw=true)
 
 The tool measures the distance in pixels and the angle.
 
-![measure pixels angle]()
+![measure pixels angle](https://github.com/Kimserey/BlogArchive/blob/master/img/gimp/measure_2.png?raw=true)
 
 The measurement can also be moved around, hover over it and you will be able to drag it around the image.
 
