--- a/20160928_gimp.md
+++ b/20160928_gimp.md
@@ -1,4 +1,4 @@
-# Get started with GIMP
+# GIMP's primary features
 
 When working on personal projects, there's one thing which use to always make me waste lot of time - art.
 Art in the sense of making logo, icon and other images like feature graphics or promotional images.
