--- a/20160928_gimp.md
+++ b/20160928_gimp.md
@@ -4,14 +4,19 @@ When working on personal projects, there's one thing which use to always make me
 Art in the sense of making logo, icon and other images like feature graphics or promotional images.
 Making something that looks "ok" is not as easy as it seems especially for people like me who have no sense of art whatsoever.
 
-Few weeks ago I completed Baskee and had to develop a feature graphic for it.
+Few weeks ago I completed [Baskee](https://kimsereyblog.blogspot.co.uk/2016/09/publish-your-android-app-to-google-play.html) and had to develop a feature graphic for it.
 Also my friend came up with the logo idea and I wanted to enhance it to make it more appealing.
 
-This sort of skills are always needed as it is hard to find people to do some art things for free. So might as well learn how to do it yourself by using the best free image editor - GIMP.
+This sort of skills are always needed as it is hard to find people to do some art things for free. 
+So might as well learn how to do it yourself by using the best free image editor - GIMP.
 
 [https://www.gimp.org/](https://www.gimp.org/)
 
 GIMP has been there for a decade and it is a well established software so I decided to jump into it to enhance Baskee logo and create the feature graphic.
+
+Here's the evolution of Baskee logo from top to bottom (v1/v2/v3):
+
+![baskee](https://github.com/Kimserey/BlogArchive/blob/master/img/gimp/baskee.jpeg?raw=true)
 
 This post is a highlight of some features from GIMP:
 
