Update and rename x.md to 20161118_snackbar.md

--- a/20161118_snackbar.md
+++ b/20161118_snackbar.md
@@ -29,23 +29,28 @@ _This is cool because with touchscreens it is highly possible that users make mi
 
 ## 2. Implement the snackbar api
 
-To implement the snackbar api you need the Android.Widget library.
-
+To implement the snackbar api you need the `Android.Support.Design.Widget` library.
 Then the functions to used are available via the Snackbar class.
 
-Make and Show are the main function.
-Make can be used to instantiate a new snackbar and when you need to show it, call show.
+```
+public static Snackbar Make (View view, string text, int duration);
+public void Show ();
+public Snackbar SetAction (string text, Action<View> clickHandler);
+```
 
-An action with a title can also be given to the snackbar to create a button like the UNDO.
+`Make` and `Show` are the main function.
+`Make` can be used to instantiate a new snackbar and when you need to show it, call `show`.
 
-Now to use the snackbar from XamarinForms, we need to call it from a service which will be injected into the XamarinForms project.
+An `action` with a title can also be given to the snackbar to create a button like the `UNDO`.
+
+Now to use the snackbar from Xamarin.Forms, we need to call it from a service which will be injected into the XamarinForms project.
 
 ## 3. Call it from Xamarin.Forms
 
-We define an interface INotification which will expose a function to send a notification to the user when events like add update or delete happen.
+We define an interface `INotification` which will expose a function to send a notification to the user when events like add update or delete happen.
 
 ```
-public interface INotificationService 
+public interface INotification 
 {
     void Notify(string message, int duration, string action, Action<object> callback);
 }
@@ -57,7 +62,7 @@ And we can now implement that in our Android application where we place the serv
 [assembly: Dependency(typeof(MyProject.NotificationService))]
 namespace MyProject
 {
-    public class NotificationService : INotificationService
+    public class NotificationService : INotification
     {
         public void Notify(
                 string message,
@@ -74,6 +79,8 @@ namespace MyProject
     }
 }
 ```
+The snackbar requires the current view to calculate where it should be shown.
+Notice how we get the current view from the `Forms.Context` by using the `Android.Resource.Id.Content` to pass it to the snackbar.
 
 Now that we have the service implemented, we can use it in our Xamarin.Forms.
 
@@ -81,11 +88,7 @@ Now that we have the service implemented, we can use it in our Xamarin.Forms.
 ... Somewhere in your Xamarin.Forms project ...
 
 DependencyService.Get<INotificationService>()
-    .Notify(
-        "Item was removed!", 
-        5000, 
-        "Undo", 
-        obj => undo();
+    .Notify("Item was removed!", 5000, "UNDO", obj => undo());
 ```
 
 And we are done!
