--- a/20161224.md
+++ b/20161224.md
@@ -1,4 +1,4 @@
-# Get log output in Console, File and in a Live display for your WebSharper sitelet
+# Get log output in Console, File and Live stream for your WebSharper sitelet
 
 Logging is an important part of development.
 Extracting and analysing debug output and errors is very important especially when the web server goes live.
