Update and rename 20161224.md to 20161224_logs.md

--- a/20161224_logs.md
+++ b/20161224_logs.md
@@ -1,4 +1,4 @@
-# Get log output in Console, File and Live stream for your WebSharper sitelet
+# Output logs in Console, File and Live stream for your WebSharper sitelet
 
 Logging is an important part of development.
 Extracting and analysing debug output and errors is very important especially when the web server goes live.
@@ -331,6 +331,6 @@ Merry Christmas and see you next time!
 
 # Other post you will like
 
--
--
--
+- Bring i18n to your WebSharper webapp - [https://kimsereyblog.blogspot.co.uk/2016/08/bring-internationalization-i18n-to-your.html](https://kimsereyblog.blogspot.co.uk/2016/08/bring-internationalization-i18n-to-your.html)
+- Create HTML components in WebSharper - [https://kimsereyblog.blogspot.co.uk/2016/08/create-html-componants-for-your.html](https://kimsereyblog.blogspot.co.uk/2016/08/create-html-componants-for-your.html)
+- Setup a nice output folder for your WebSharper Owin selfhost project - [https://kimsereyblog.blogspot.co.uk/2016/07/how-to-setup-nice-output-folder-for.html](https://kimsereyblog.blogspot.co.uk/2016/07/how-to-setup-nice-output-folder-for.html)
