--- a/20161224_logs.md
+++ b/20161224_logs.md
@@ -2,7 +2,7 @@
 
 Logging is an important part of development.
 Extracting and analysing debug output and errors is very important especially when the web server goes live.
-In this post I will show how we can setup a __Console target__, a __File target__ and finally a __Live display__ on a static HTML page using NLog.
+In this post I will show how we can setup a __Console target__, a __File target__ and finally a __Live stream__ on a static HTML page using NLog.
 
 NLog is a log framework which can be configured to output logs on different "target". 
 
@@ -14,7 +14,7 @@ This post is composed by 4 parts:
 1. Get NLog on your sitelet
 2. Define a Console target
 3. Define a File target
-4. Define a Live display target - WebSharper part
+4. Define a Live stream target - WebSharper part
 ```
 
 ## 1. Get NLog on your sitelet
@@ -123,7 +123,7 @@ Here are the few I set:
 
 ![https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20161223_logs/file.png](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20161223_logs/file.png)
 
-## 4. Live display with SSE
+## 4. Define a Live stream (SSE)
 
 We are almost done as we can now visualize the log in direct from the `Console` and we have it stored in `daily Files`.
 
@@ -143,7 +143,7 @@ _This idea actually came from my friend [@nbevans](https://twitter.com/nbevans) 
 
 In order to create the endpoint we will leverage the custom targets from NLog together with HTTP __SSE (server-send events)__.
 
-### 4.1 Custom target
+### 4.1 Custom target 
 
 Our custom target will be named `HttpSSELogTarget`.
 
