--- a/20161224_logs.md
+++ b/20161224_logs.md
@@ -1,6 +1,6 @@
 # Output logs in Console, File and Live stream for your WebSharper sitelet
 
-Logging is an important part of development.
+Logs are an important part of development.
 Extracting and analysing debug output and errors is very important especially when the web server goes live.
 In this post I will show how we can setup a __Console target__, a __File target__ and finally a __Live stream__ on a static HTML page using NLog.
 
