--- a/20161224_logs.md
+++ b/20161224_logs.md
@@ -2,9 +2,9 @@
 
 Logs are an important part of development.
 Extracting and analysing debug output and errors is very important especially when the web server goes live.
-In this post I will show how we can setup a __Console target__, a __File target__ and finally a __Live stream__ on a static HTML page using NLog.
+In this post I will show how we can setup a __Console target__, a __File target__ and a __Live stream__ on a static HTML page using `NLog`.
 
-NLog is a log framework which can be configured to output logs on different "target". 
+`NLog` is a log framework which can be configured to output logs on different "target". 
 
 [https://github.com/nlog/NLog/wiki/Targets](https://github.com/nlog/NLog/wiki/Targets)
 
