--- a/20161224_logs.md
+++ b/20161224_logs.md
@@ -19,7 +19,7 @@ This post is composed by 4 parts:
 
 ## 1. Get NLog on your sitelet
 
-First start by getting NLog and NLog.Configuration. This will install NLog package in your project and also add an xml configuration file with an xsd.
+First start by getting NLog and NLog.Configuration packages from nuget. This will install NLog package in your project and also add an xml configuration file with an xsd.
 
 To start logging, simply get the logger instance via 
 
@@ -27,7 +27,7 @@ To start logging, simply get the logger instance via
 let logger = LogManager.GetCurrentClassLogger()
 ```
 
-and start logging by using any of the log level Trace Debug Info Warning Error or Fatal.
+and start logging by using any of the log level Trace/Debug/Info/Warning/Error/Fatal.
 
 ```
 logger.Trace "Some log message"
@@ -42,8 +42,9 @@ __I use a simple WebSharper OWIN selfhost created from the selfhost template.__
 
 Targets are the main writers of NLog.
 In order to get logs written somewhere two configurations are needed:
-1. At least one target
-2. A rule directing logs to a target
+
+ 1. At least one target
+ 2. A rule directing logs to a target
 
 To setup a console target we add the following in the nlog.xml config:
 
@@ -135,9 +136,10 @@ We could check the log files but that is not good enough, we need a quick way to
 The solution is to provide a HTTP endpoint which will deliver a log stream.
 
 Having a HTTP endpoint will allow us to:
-1. not have to remote to the vm to check logs
-2. have a log output constantly open and easily inspect the log stream
-3. have a log output even though our application doesn't have a console
+
+ 1. not have to remote to the vm to check logs
+ 2. have a log output constantly open and easily inspect the log stream
+ 3. have a log output even though our application doesn't have a console
 
 _This idea actually came from my friend [@nbevans](https://twitter.com/nbevans) and I thought that I had to cover it because it is the log target that I now use the most everywhere._
 
@@ -149,9 +151,9 @@ Our custom target will be named `HttpSSELogTarget`.
 
 The way it will work is as followed:
 
-1. NLog route logs to our custom target
-2. We append the log in a global state where we hold all unread logs
-3. WebSharper sitelet SSE endpoint hits and we deliver all unread messages
+ 1. NLog route logs to our custom target
+ 2. We append the log in a global state where we hold all unread logs
+ 3. WebSharper sitelet SSE endpoint hits and we deliver all unread messages
 
 In order to provide a global state of logs we create a `MailboxProcessor`.
 _If you never seen mailbox before, I covered it in a previous blog post on [How to handle global state in F# with MailboxProcessor](https://kimsereyblog.blogspot.co.uk/2016/07/manage-mutable-state-using-actors-with.html._
@@ -267,8 +269,9 @@ The body section extracts all the unread messages from the `HttpLogAgent` define
 This is defined in the SSE protocol.
 
 For the SSE to work we will will need 2 endpoints on our sitelet: 
-1. the html page
-2. the event-stream
+
+ 1. the html page
+ 2. the event-stream
 
 ```
 type Endpoint =
