--- a/20161224_logs.md
+++ b/20161224_logs.md
@@ -19,7 +19,7 @@ This post is composed by 4 parts:
 
 ## 1. Get NLog on your sitelet
 
-First start by getting NLog and NLog.Configuration packages from nuget. This will install NLog package in your project and also add an xml configuration file with an xsd.
+First start by getting NLog and NLog.Configuration packages from nuget. This will install NLog package in your project and also add an xml configuration `nlog.xml` file with an xsd.
 
 To start logging, simply get the logger instance via 
 
@@ -41,24 +41,24 @@ __I use a simple WebSharper OWIN selfhost created from the selfhost template.__
 ## 2. Define a Console target
 
 Targets are the main writers of NLog.
-In order to get logs written somewhere two configurations are needed:
+In order to get logs written, two configurations are needed:
 
- 1. At least one target
+ 1. At target
  2. A rule directing logs to a target
 
-To setup a console target we add the following in the nlog.xml config:
+To setup a console target we add the following in the `nlog.xml` config:
 
 ```
 <targets>
   <target xsi:type="Console"
           name="console"
-          layout="[${longdate}] ${level:uppercase=true}: ${message}"/>
+          layout="[${longdate}] ${level}: ${message}"/>
 </targets>
 ```
 
-The type is the target type here Console. The name will be used to make rules point to that particular target and the layout is used to format the log message and enhance it with other values like timestamp.
+The `type` is the target type here Console. The `name` will be used to make rules point to that particular target and the `layout` is used to format the log message and enhance it with other values like timestamp.
 
-Next we need the rule to define which logs will be printed in console. We need the following in the config file:
+Next we need the rule to define which logs will be printed in console. We add the following in the config file:
 
 ```
 <rules>
@@ -96,7 +96,7 @@ Now when running the WebSharper selfhost, we should see the log output in the co
 
 ## 3. Define a File target
 
-We can also define a file target to get logs output saved into a file.
+We can also define a file target to get log outputs saved into a file.
 
 ```
 <target xsi:type="File"
@@ -114,13 +114,13 @@ Here are the few I set:
  - `fileName` is the log filename. Using the date as name will create a `daily log` file which will help in finding logs faster.
  - `createDirs` creates the sub directories of the log files.
 
- Now we can add the rule similar to (2).
+ We also need to add the rule similar to (2).
 
  ```
 <logger name="*" minlevel="Trace" writeTo="file" />
  ```
 
- No when running the Websharper selfhost, we should see the logs output in the file.
+ Now when running the Websharper selfhost, we should see the logs output in the file.
 
 ![https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20161223_logs/file.png](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20161223_logs/file.png)
 
@@ -128,12 +128,12 @@ Here are the few I set:
 
 We are almost done as we can now visualize the log in direct from the `Console` and we have it stored in `daily Files`.
 
-__But what about the times where we don't have access to a direct console?__
+__But what about the times where we don't have access to a console?__
 
 There are times where we don't have a console, for example if our application is a Windows service.
 We could check the log files but that is not good enough, we need a quick way to see a log stream to detect potential errors.
 
-The solution is to provide a HTTP endpoint which will deliver a log stream.
+A solution is to provide a HTTP endpoint which will deliver a log stream.
 
 Having a HTTP endpoint will allow us to:
 
@@ -141,7 +141,7 @@ Having a HTTP endpoint will allow us to:
  2. have a log output constantly open and easily inspect the log stream
  3. have a log output even though our application doesn't have a console
 
-_This idea actually came from my friend [@nbevans](https://twitter.com/nbevans) and I thought that I had to cover it because it is the log target that I now use the most everywhere._
+_This idea actually came from my friend [@nbevans](https://twitter.com/nbevans) and I thought that I had to cover it because it is the log target that I now use the most._
 
 In order to create the endpoint we will leverage the custom targets from NLog together with HTTP __SSE (server-send events)__.
 
@@ -155,7 +155,7 @@ The way it will work is as followed:
  2. We append the log in a global state where we hold all unread logs
  3. WebSharper sitelet SSE endpoint hits and we deliver all unread messages
 
-In order to provide a global state of logs we create a `MailboxProcessor`.
+In order to provide a global state of logs we create a `MailboxProcessor` which we'll call `HttpLogAgent`.
 _If you never seen mailbox before, I covered it in a previous blog post on [How to handle global state in F# with MailboxProcessor](https://kimsereyblog.blogspot.co.uk/2016/07/manage-mutable-state-using-actors-with.html._
 
 Here's the log agent:
@@ -205,8 +205,8 @@ Next we need to implement the SSE protocol ([https://developer.mozilla.org/en-US
 
 __Client side__
 
-For me I don't need to be concerned about compatibility because the logs will certainly only be used by myself.
 _If you need to have compatibility, refer to MDN documentation to check if SSE is available for the range of browser versions you need to support._
+_I don't need to be concerned about compatibility because the logs will certainly only be used by myself._
 
 From the client, we need to instantiate an `EventSource` and add a listener on `message` received.
 
@@ -220,10 +220,11 @@ type EventSource() =
     member self.AddEventListener(callback: string -> unit) = X<unit>
 ```
 
-In order to do this, I created a proxy in F# and used the `Inline` attribute to redirect to the correct JS implementation.
+In order to do this, we create a proxy in F# and by using the `Inline` attribute to bind to the correct JS implementation.
 _If you never seen the Inline attribute, I covered it in my previous blog post [Understand the difference between Inline and Direct in WebSharper](https://kimsereyblog.blogspot.co.uk/2016/05/understand-difference-between-direct.html)._
 
-Now we define a simple page consisting of a `div` block which will get filled up when messages will be received.
+Next we define a simple page consisting of a `div` block which will get filled up when messages will be received:
+
 ```
 [<JavaScript>]
 module Logs =
@@ -237,11 +238,11 @@ module Logs =
             []
 ```
 
-Note `logevents` passed to the `EventSource` is the endpoint name which delivers the event stream.
+Note `logevents` passed to the `EventSource` is the endpoint name which delivers the event stream. (We will define it next)
 
 __Server side sitelet__
 
-On the server side we use `Content.Custom` to create content which will deliver an event stream.
+On the server side we use `Content.Custom` to create content which will serve an event stream with our logs.
 We set the `Content-type` to `text/event-stream`, the `Cache-control` to `no-cache` and the `Connection` to `keep-alive`.
 This headers are all important and have to be specified.
 
@@ -331,6 +332,8 @@ Today we saw how we could output logs in Console, Files and in a live stream for
 Hope you enjoyed this post as much as I enjoyed writing it.
 If you have any questions, leave it here or hit me on Twitter [@Kimserey_Lam](https://twitter.com/Kimserey_Lam).
 Merry Christmas and see you next time!
+
+Full code available on my GitHub - [https://github.com/Kimserey/JwtWebSharperSitelet/blob/master/Website/NLog.config](https://github.com/Kimserey/JwtWebSharperSitelet/blob/master/Website/NLog.config)
 
 # Other post you will like
 
