Update and rename x.md to 20161230_fa_xf.md

--- a/20161230_fa_xf.md
+++ b/20161230_fa_xf.md
@@ -1,4 +1,4 @@
-# Use Font awesome from your Xamarin.Forms project
+# Use Font Awesome from your Xamarin.Forms project
 
 Icons are important in mobile applications where space is limited.
 We use icon everywhere to convey action intent like `+` would be to add an item or a `bin` would be to delete one.
