--- a/20170221_Form_post.md
+++ b/20170221_Form_post.md
@@ -1,3 +1,5 @@
+# Post form data to server
+
 When building websites, chances are that you will need to gather data from your users.
 The most common way to gather data is via a form. But after gathering the data, there are two ways to submit it from the browser to your server:
 1. Using a HTML form
